--- a/src/navStyle.css
+++ b/src/navStyle.css
@@ -2,7 +2,6 @@
   display: flex;
   height: 20vh;
   justify-content: space-between;
-  
 }
 
 .nav-bar {
@@ -12,19 +11,14 @@
   justify-content: flex-end;
   z-index: 3;
   background-color: white;
-  
- 
 }
 .nav-section {
   display: flex;
   margin-top: 10px;
   height: 12vh;
   width: 50vw;
-
   justify-content: flex-end;
-
-  padding-right: 90px;
- 
+  padding-right: 60px;
   z-index: 1;
 }
 
@@ -38,7 +32,6 @@
   text-align: center;
   padding: 5px;
   align-items: center;
-  
 }
 .errorboundary-link {
   width: 12vw;
@@ -48,14 +41,7 @@
   color: black;
   transition: all 0.2s;
 }
-/* .nav {
-  display: flex;
-  height: 20vh;
-  width: 50vw;
-  padding: 30px;
-  align-self: flex-end;
-  border: 2px solid red;
-} */
+
 .logo {
   display: flex;
   gap: 0;
@@ -67,7 +53,7 @@
   border-radius: 8px;
   padding: 5px;
 }
-.home-link,
+/* .home-link,
 .repository-link,
 .error-link,
 .portfolio-link {
@@ -81,7 +67,7 @@
   padding: 5px;
   align-items: center;
   color: black;
-}
+} */
 .home-link {
   border: 1.5px solid grey;
 }
@@ -115,7 +101,6 @@
     width: 100%;
     justify-content: center;
     /* height: 100%; */
-
   }
   .nav-wrap {
     display: flex;
@@ -126,8 +111,6 @@
     top: 0px;
     right: 0px;
     z-index: 2;
-  
-   
   }
 
   .nav-section {
@@ -142,11 +125,10 @@
     right: -100%;
     -webkit-box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
     box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
-  z-index: 1;
-  justify-content: flex-start;
-  padding-top: 40px;
-  border-radius: 5px;
-  
+    z-index: 1;
+    justify-content: flex-start;
+    padding-top: 40px;
+    border-radius: 5px;
   }
 
   .show {
@@ -167,13 +149,10 @@
     font-size: 1.9em;
     height: 40%;
     font-weight: 700;
-
   }
-  .errorboundary-link{
+  .errorboundary-link {
     width: 130%;
-    
   }
-
 
   .logo {
     display: flex;
@@ -182,9 +161,8 @@
     padding-left: 10px;
     font-size: 0.9em;
     color: grey;
-    
   }
-  .sunday{
+  .sunday {
     color: rgb(94, 95, 93);
   }
   .logo h2 {
