--- a/src/repolistStyle.css
+++ b/src/repolistStyle.css
@@ -137,7 +137,6 @@
   }
   .para {
     margin-left: 300px;
-  
     color: yellowgreen;
     margin-top: -3pxpx;
   }
@@ -145,7 +144,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
+  }
+  .repolist-error h1{
+    margin-top: 220px;
   }
   .repolist-error button {
     width: 180px;
@@ -157,6 +159,7 @@
     outline: none;
     color: white;
     font-size: 1.4em;
+    margin-top: 50px;
   }
   .repolist-error button:hover {
     background-color: rgb(189, 138, 237);
@@ -221,6 +224,8 @@
     font-size: 1.5em;
     font-weight: 700;
   } 
+
+  
   @media (min-width: 180px) and (max-width: 780px){
 
     .para {
@@ -261,5 +266,18 @@
       flex-direction: row;
       flex-wrap: wrap;
       height: 300px;
+    }
+
+    .repolist-error {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* margin-top: 100px; */
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    .repolist-error h1{
+      margin-top: 120px;
+      text-align: center;
     }
   } 
